--- a/src/main/java/io/github/astrapi69/crypto/annotations/package.html
+++ b/src/main/java/io/github/astrapi69/crypto/annotations/package.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      de.alpharogroup.crypto.annotations
+      io.github.astrapi69.crypto.annotations
     </title>
   </head>
   <body>
