--- a/src/main/java/io/github/astrapi69/crypto/pw/package.html
+++ b/src/main/java/io/github/astrapi69/crypto/pw/package.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      de.alpharogroup.crypto.padding
+      io.github.astrapi69.crypto.padding
     </title>
   </head>
   <body>
