--- a/src/main/java/io/github/astrapi69/crypto/provider/package.html
+++ b/src/main/java/io/github/astrapi69/crypto/provider/package.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<html lang="en">
   <head>
     <title>
-      de.alpharogroup.crypto.padding
+      io.github.astrapi69.crypto.padding
     </title>
   </head>
   <body>
