new enum class KeyStringEntry that holds prefixes for PEM value entries created
- export all packages in module-info.java file
- rename of all packages that was in plural form to singular form

--- a/src/main/java/io/github/astrapi69/crypto/mode/package.html
+++ b/src/main/java/io/github/astrapi69/crypto/mode/package.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<html lang="en">
   <head>
     <title>
-      io.github.astrapi69.crypto.padding
+      io.github.astrapi69.crypto.mode
     </title>
   </head>
   <body>
-    This package provides an enum with algorithms for password hash types
+    This package provides an enum that defines the block chaining mode
   </body>
 </html>
