--- a/src/main/java/io/github/astrapi69/crypto/annotation/package.html
+++ b/src/main/java/io/github/astrapi69/crypto/annotation/package.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<html lang="en">
   <head>
     <title>
-      io.github.astrapi69.crypto.annotations
+      io.github.astrapi69.crypto.annotation
     </title>
   </head>
   <body>
