--- a/src/main/java/io/github/astrapi69/crypto/password/package.html
+++ b/src/main/java/io/github/astrapi69/crypto/password/package.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<html lang="en">
   <head>
     <title>
-      io.github.astrapi69.crypto.modes
+      io.github.astrapi69.crypto.padding
     </title>
   </head>
   <body>
-    This package provides an enum that defines the block chaining mode
+    This package provides an enum with algorithms for password hash types
   </body>
 </html>
